[project]
name = "janus-core"
version = "0.7.5"
description = "Tools for machine learnt interatomic potentials"
authors = [
    { name = "Elliott Kasoar" },
    { name = "Patrick Austin" },
    { name = "Harvey Devereux" },
    { name = "Kieran Harris" },
    { name = "David Mason" },
    { name = "Jacob Wilkins" },
    { name = "Federica Zanca" },
    { name = "Alin M. Elena" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
]
readme = "README.md"

dependencies = [
    "ase<4.0,>=3.24",
    "codecarbon<3.0.0,>=2.8.3",
    "numpy<2.0.0,>=1.26.4",
    "phonopy<3.0.0,>=2.23.1",
    "pymatgen>=2025.1.24",
    "pyyaml<7.0.0,>=6.0.1",
    "rich<14.0.0,>=13.9.1",
    "seekpath<2.0.0,>=1.9.7",
    "spglib<3.0.0,>=2.3.0",
    "typer<1.0.0,>=0.12.5",
    "typer-config<2.0.0,>=1.4.2",
]

[project.optional-dependencies]
chgnet = [
    "chgnet == 0.4.0",
]
dpa3 = [
    "deepmd-kit",
]
mace = [
    "mace-torch==0.3.12",
    "torch-dftd==0.4.0",
]
nequip = [
    "nequip == 0.6.1",
]
orb = [
    "orb-models == 0.4.2; sys_platform != 'win32'",
    "pynanoflann; sys_platform != 'win32'",
]
sevennet = [
    "sevenn == 0.10.3",
]
visualise = [
    "weas-widget<0.2,>=0.1.26"
]
all = [
    "janus-core[chgnet]",
    "janus-core[dpa3]",
    "janus-core[mace]",
    "janus-core[nequip]",
    "janus-core[orb]",
    "janus-core[sevennet]",
    "janus-core[visualise]",
]

# MLIP with updated e3nn
mattersim = [
    "mattersim == 1.1.2; sys_platform != 'win32'",
]

# MLIPs with dgl dependency
alignn = [
    "alignn == 2024.5.27",
    "torch == 2.2",
    "torchdata == 0.7.1",
]
m3gnet = [
    "matgl == 1.1.3",
    "torch == 2.2",
    "torchdata == 0.7.1",
]

[project.scripts]
janus = "janus_core.cli.janus:app"

[project.urls]
Repository = "https://github.com/stfc/janus-core/"
Documentation = "https://stfc.github.io/janus-core/"

[dependency-groups]
dev = [
    "coverage[toml]<8.0.0,>=7.4.1",
    "data-tutorials>=0.3.1",
    "ipykernel>=6.29.5",
    "pgtest<2.0.0,>=1.3.2",
    "pytest<9.0,>=8.0",
    "pytest-cov<5.0.0,>=4.1.0",
    "tox-uv<2.0,>=1.16.1",
    "wheel<1.0,>=0.42",
]

docs = [
    "furo<2025.0.0,>=2024.1.29",
    "jupyter>=1.1.1",
    "markupsafe<2.1",
    "nbsphinx>=0.9.6",
    "numpydoc<2.0.0,>=1.6.0",
    "sphinx<8.2.0,>=8.0.2",
    "sphinxcontrib-contentui<1.0.0,>=0.2.5",
    "sphinxcontrib-details-directive<1.0,>=0.1",
    "sphinx-autodoc-typehints<3.0.0,>=2.5.0",
    "sphinx-collapse>=0.1.3",
    "sphinx-copybutton<1.0.0,>=0.5.2",
    "janus-core[visualise]",
]

pre-commit = [
    "pre-commit<4.0.0,>=3.6.0",
    "ruff<1.0.0,>=0.9.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
# Configuration for [pytest](https://docs.pytest.org)
python_files = "test_*.py"
addopts = '--cov-report xml'
pythonpath = ["."]

[tool.coverage.run]
# Configuration of [coverage.py](https://coverage.readthedocs.io)
# reporting which lines of your plugin are covered by tests
source=["janus_core"]

[tool.ruff]
exclude = ["conf.py", "*ipynb"]
target-version = "py310"

[tool.ruff.lint]
# Ignore complexity
ignore = ["C901"]
select = [
    # flake8-bugbear
    "B",
    # pylint
    "C", "R",
    # pydocstyle
    "D",
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F", "FA",
    # pyupgrade
    "I",
    # pep8-naming
    "N",
    # isort
    "UP",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.numpydoc_validation]
# report on all checks, except the below
checks = [
    "all",
    "EX01",
    "SA01",
    "ES01",
    "PR04", # Ignore no type (types come from signature as via sphinx_autodoc_typehints)
]
# Don't report on objects that match any of these regex
exclude = [
    ".__weakref__$",
    ".__repr__$",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
    "pre-commit",
]

constraint-dependencies = [
    "dgl==2.1",
    "torch<2.6",
]
conflicts = [
    [
      { extra = "chgnet" },
      { extra = "alignn" },
    ],
    [
      { extra = "chgnet" },
      { extra = "m3gnet" },
    ],
    [
      { extra = "all" },
      { extra = "alignn" },
    ],
    [
      { extra = "all" },
      { extra = "m3gnet" },
    ],
    [
      { extra = "mattersim" },
      { extra = "mace" },
    ],
    [
      { extra = "mattersim" },
      { extra = "all" },
    ],
]

[tool.uv.sources]
deepmd-kit = { git = "https://github.com/deepmodeling/deepmd-kit.git", rev = "dpa3-alpha" }
pynanoflann = { git = "https://github.com/dwastberg/pynanoflann", rev = "af434039ae14bedcbb838a7808924d6689274168" }
