[project]
name = "janus-core"
version = "0.8.6"
description = "Tools for machine learnt interatomic potentials"
authors = [
    { name = "Elliott Kasoar" },
    { name = "Patrick Austin" },
    { name = "Harvey Devereux" },
    { name = "Kieran Harris" },
    { name = "David Mason" },
    { name = "Jacob Wilkins" },
    { name = "Federica Zanca" },
    { name = "Alin M. Elena" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
]
readme = "README.md"

dependencies = [
    "ase<4.0,>=3.25",
    "click<9,>=8.2.1",
    "codecarbon<4.0.0,>=3.0.7",
    "numpy<3.0.0,>=1.26.4",
    "phonopy<3.0.0,>=2.39.0",
    "pymatgen>=2025.1.24",
    "pyyaml<7.0.0,>=6.0.1",
    "rich<14.0.0,>=13.9.1",
    "seekpath<2.0.0,>=1.9.7",
    "spglib<3.0.0,>=2.3.0",
    "typer<1.0.0,>=0.19.1",
    "typer-config<2.0.0,>=1.4.2",
]

[project.optional-dependencies]
chgnet = [
    "chgnet == 0.4.2",
]
dpa3 = [
    "deepmd-kit == 3.1.0",
]
d3 = [
    "torch-dftd==0.5.1",
]
grace = [
    "tensorpotential == 0.5.1",
]
mace = [
    "mace-torch==0.3.14",
    "janus-core[d3]",
]
orb = [
    "orb-models == 0.5.5; sys_platform != 'win32'",
]
pet-mad = [
    "pet-mad == 1.3.1; sys_platform != 'win32'"
]
plumed = [
    "plumed<3.0.0,>=2.9.0; sys_platform != 'win32'",
]
visualise = [
    "weas-widget<0.2,>=0.1.26"
]
all = [
    "janus-core[chgnet]",
    "janus-core[grace]",
    "janus-core[d3]",
    "janus-core[mace]",
    "janus-core[orb]",
    "janus-core[pet-mad]",
    "janus-core[plumed]",
    "janus-core[visualise]",
]

# MLIPs with updated e3nn
fairchem = [
    "fairchem-core == 1.10.0",
]
mattersim = [
    "mattersim == 1.1.2; sys_platform != 'win32'",
]
nequip = [
    "nequip == 0.14.0",
]
sevennet = [
    "sevenn == 0.11.2.post1",
]
uma = [
    "fairchem-core == 2.3.0",
]

# MLIPs with dgl dependency
alignn = [
    "alignn == 2024.5.27; sys_platform != 'win32'",
    "torch == 2.2; sys_platform != 'win32'",
    "torchdata == 0.7.1; sys_platform != 'win32'",
]
m3gnet = [
    "matgl == 1.1.3; sys_platform != 'win32'",
    "torch == 2.2; sys_platform != 'win32'",
    "torchdata == 0.7.1; sys_platform != 'win32'",
]

[project.scripts]
janus = "janus_core.cli.janus:app"

[project.urls]
Repository = "https://github.com/stfc/janus-core/"
Documentation = "https://stfc.github.io/janus-core/"

[dependency-groups]
dev = [
    "coverage[toml]<8.0.0,>=7.4.1",
    "data-tutorials>=0.3.1",
    "ipykernel>=6.29.5",
    "pgtest<2.0.0,>=1.3.2",
    "pytest<9.0,>=8.0",
    "pytest-cov<5.0.0,>=4.1.0",
    "tox-uv<2.0,>=1.26.0",
    "wheel<1.0,>=0.42",
]

docs = [
    "furo<2025.0.0,>=2024.1.29",
    "jupyter>=1.1.1",
    "markupsafe<2.1",
    "nbsphinx>=0.9.6",
    "numpydoc<2.0.0,>=1.6.0",
    "sphinx<8.2.0,>=8.0.2",
    "sphinxcontrib-contentui<1.0.0,>=0.2.5",
    "sphinxcontrib-details-directive<1.0,>=0.1",
    "sphinx-autodoc-typehints<3.0.0,>=2.5.0",
    "sphinx-collapse>=0.1.3",
    "sphinx-copybutton<1.0.0,>=0.5.2",
    "janus-core[visualise]",
]

pre-commit = [
    "pre-commit<5.0.0,>=4.2.0",
    "ruff<1.0.0,>=0.11.13",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "janus_core"
module-root = ""

[tool.pytest.ini_options]
# Configuration for [pytest](https://docs.pytest.org)
python_files = "test_*.py"
addopts = '--cov-report xml'
pythonpath = ["."]

[tool.coverage.run]
# Configuration of [coverage.py](https://coverage.readthedocs.io)
# reporting which lines of your plugin are covered by tests
source=["janus_core"]

[tool.ruff]
exclude = ["conf.py", "*ipynb","containers/assets/tutorials/*.py"]
target-version = "py310"

[tool.ruff.lint]
# Ignore complexity
ignore = ["C901"]
select = [
    # flake8-bugbear
    "B",
    # pylint
    "C", "R",
    # pydocstyle
    "D",
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F", "FA",
    # pyupgrade
    "I",
    # pep8-naming
    "N",
    # isort
    "UP",
]
[tool.ruff.lint.per-file-ignores]
'containers/*.py' = ['D100', 'E501']

[tool.ruff.lint.isort]
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.numpydoc_validation]
# report on all checks, except the below
checks = [
    "all",
    "EX01",
    "SA01",
    "ES01",
    "PR04", # Ignore no type (types come from signature as via sphinx_autodoc_typehints)
]
# Don't report on objects that match any of these regex
exclude = [
    ".__weakref__$",
    ".__repr__$",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
    "pre-commit",
]

constraint-dependencies = [
    "dgl==2.1",
    "tensorflow>=2.16.1",
    "tensorflow-io-gcs-filesystem<=0.31.0; sys_platform == 'win32'",
    "snowballstemmer<3",
]

conflicts = [
    [
      { extra = "chgnet" },
      { extra = "alignn" },
    ],
    [
      { extra = "chgnet" },
      { extra = "m3gnet" },
    ],
    [
      { extra = "orb" },
      { extra = "alignn" },
    ],
    [
      { extra = "orb" },
      { extra = "m3gnet" },
    ],
    [
      { extra = "all" },
      { extra = "alignn" },
    ],
    [
      { extra = "all" },
      { extra = "m3gnet" },
    ],
    [
      { extra = "mattersim" },
      { extra = "mace" },
    ],
    [
      { extra = "mattersim" },
      { extra = "all" },
    ],
    [
      { extra = "fairchem" },
      { extra = "alignn" },
    ],
    [
      { extra = "fairchem" },
      { extra = "m3gnet" },
    ],
    [
      { extra = "fairchem" },
      { extra = "mace" },
    ],
    [
      { extra = "fairchem" },
      { extra = "orb" },
    ],
    [
      { extra = "fairchem" },
      { extra = "all" },
    ],
    [
      { extra = "uma" },
      { extra = "alignn" },
    ],
    [
      { extra = "uma" },
      { extra = "fairchem" },
    ],
    [
      { extra = "uma" },
      { extra = "grace" },
    ],
    [
      { extra = "uma" },
      { extra = "mace" },
    ],
    [
      { extra = "uma" },
      { extra = "mattersim" },
    ],
    [
      { extra = "uma" },
      { extra = "m3gnet" },
    ],
    [
      { extra = "uma" },
      { extra = "all" },
    ],
    [
      { extra = "sevennet" },
      { extra = "mace" },
    ],
    [
      { extra = "sevennet" },
      { extra = "all" },
    ],
    [
      { extra = "nequip" },
      { extra = "mace" },
    ],
    [
      { extra = "nequip" },
      { extra = "all" },
    ],
]
